Implement new endpoint "/users" with post method, extend security config to set user ROLE.
